# Knowledge-Based-Movie-QA-System

./: .gitignore  Dataset_cleaning.py  Export_to_csv.py  NLP_triple_extract.py  Neo4j_import.py  Prepare_dataset.py  QA_system.py  Query_generator.py  Question_parser.py  README.md  application.py  pyproject.toml  requirements.txt  test_corenlp.py  test_neo4j.py
.platform/hooks/prebuild/: 01_pip_temp.sh
static/css/: style.css
templates/: home.html  index.html
