[project]
name = "knowledge-based-movie-qa-system"
version = "1.0.0"
requires-python = "==3.12.*"

dependencies = [
    "Flask",
    "pandas",
    "pymongo",
    "tqdm",
    "neo4j",
    "spacy",
    "python-dotenv",
    "certifi",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]

[project.scripts]
app = "application:application"